# FerrariStore-FE

./: README.md
backend-python/TH-ebook/: backend.py  pyproject.toml
backend-python/TH-ebook/public/: dataworker.js  iawwl.htm
backend-python/TH-ebook/public/content/1/: 1-knqc.htm  2-bctcqcbc.htm  3-qchq.htm
backend-python/TH-ebook/th_ebook/: __init__.py
frontend/TH-ebook/: .env  .gitignore  backend.py  eslint.config.js  index.html  package.json  pyproject.toml  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/TH-ebook/public/: NotFoundPage.html  books  users
frontend/TH-ebook/public/content/1/: 4-qcpkkq.htm  5-kl.htm
frontend/TH-ebook/remnants/: Book.tsx  background-container.tsx  swiper-breakpoint-BookContainer.tsx  useFetchBook.ts
frontend/TH-ebook/src/: App.tsx  BookCard.tsx  BookList.tsx  CartIcon.tsx  HungApp.tsx  Notification.tsx  index.css  main.tsx
frontend/TH-ebook/src/components/: CardDefault.tsx  OverlayComponent.tsx
frontend/TH-ebook/src/components/BookDetail/: AuthorCard.tsx  AuthorContainer.tsx  AuthorTagComponent.tsx  BookDetail.tsx  ButtonGroupContainer.tsx  (+7 more)
frontend/TH-ebook/src/hooks/: useBooksRedux.ts  useFetchBook.ts  useFetchData.ts
frontend/TH-ebook/src/models/: Author.ts  Book.ts  User.ts  UserRespone.ts
frontend/TH-ebook/src/pages/: BookDetailPage.tsx  BookListPage.tsx  HomePage.tsx  ReaderPage.tsx  SignInPage.tsx  SignUpPage.tsx
frontend/TH-ebook/src/store/: rootReducer.ts  rootSaga.ts  store.ts
frontend/TH-ebook/src/type/: ApiResponse.ts  BookStateType.ts  ReaderStateType.ts  UserStateType.ts
(+201 files in other folders)
