[tool.poetry]
name = "th-ebook"
version = "0.1.0"
description = "backend lam tren python cho web xuat ban ebook nhung lam co ban thoi"
authors = ["bhbghghbgb, nguyenthanhhungdev"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.2"}
pydantic-settings = "^2.5.2"
odmantic = "^1.0.2"
motor = ">=3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
