[tool.poetry]
name = "th-ebook"
version = "0.1.0"
description = "backend lam nhanh cho mon lap trinh hien dai"
authors = ["bhbghghbgb <113711814+bhbghghbgb@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
